@@ -41,6 +41,6 @@ weesetup$(EXEEXT): weesetup.o xdio.o utils.o
 	$(CC) $(CFLAGS) -s -obin/$@ $^
 	rm *.o *.d mbr.h
 mbr.h: wee63.mbr $(BIN2H_DEPS)
-	$(BIN2H_EXEC) $< $@ wee63_mbr
+	./$(BIN2H_EXEC) $< $@ wee63_mbr
 wee63.mbr: nt6mbr.bin ../wee/wee63.mbr
 	./mkmbr
